# DocuNomNom

./: .gitignore  CHANGELOG.md  README.md
.cursor/plans/: docunomnom_architektur_plan_6b3ab941.plan.md
.github/workflows/: ci.yml
backend/: .importlinter  README.md  alembic.ini  pyproject.toml
backend/src/docunomnom/: __init__.py
backend/src/docunomnom/adapters/: __init__.py  clock.py
backend/src/docunomnom/adapters/ai_split/: __init__.py  _schema.py  none.py  ollama.py  openai.py
backend/src/docunomnom/adapters/http/: __init__.py
backend/src/docunomnom/adapters/ocr/: __init__.py  errors.py  generic_api.py  ocrmypdf.py
backend/src/docunomnom/adapters/pdf/: __init__.py  extract.py
backend/src/docunomnom/api/: __init__.py  deps.py  frontend.py  main.py
backend/src/docunomnom/api/routers/: config.py  health.py  history.py  jobs.py  keywords.py  review.py
backend/src/docunomnom/api/schemas/: __init__.py  common.py  config.py  history.py  jobs.py  review.py
backend/src/docunomnom/api/services/: __init__.py  config_service.py  review_service.py
backend/src/docunomnom/config/: __init__.py  defaults.yaml  settings.py
backend/src/docunomnom/core/: __init__.py  events.py  run_key.py
backend/src/docunomnom/core/confidence/: __init__.py
backend/src/docunomnom/core/evidence/: __init__.py  validator.py
backend/src/docunomnom/core/features/: __init__.py  keyword.py  layout.py  text.py
backend/src/docunomnom/core/models/: __init__.py  entities.py  types.py
backend/src/docunomnom/core/ports/: __init__.py  ai_split.py  clock.py  job_queue.py  ocr.py  storage.py
backend/src/docunomnom/core/rules/: __init__.py  confidence.py  keyword_splitter.py
backend/src/docunomnom/core/usecases/: __init__.py  ai_split.py  review.py  transition_job.py
backend/src/docunomnom/i18n/: __init__.py
backend/src/docunomnom/runtime/: __init__.py  logging.py  preflight.py
backend/src/docunomnom/storage/: __init__.py
backend/src/docunomnom/storage/db/: __init__.py  base.py  bootstrap.py  engine.py  models.py  queue.py  repositories.py
backend/src/docunomnom/storage/files/: __init__.py  atomic.py  ocr_artifacts.py  safe_path.py
backend/src/docunomnom/storage/migrations/: env.py
backend/src/docunomnom/storage/migrations/versions/: 20260419_0001_baseline.py
backend/src/docunomnom/worker/: __init__.py  ai_factory.py  loop.py  main.py  ocr_factory.py  pipeline.py  processor.py  watcher.py
backend/tests/: conftest.py
backend/tests/adapter/: test_ai_split_adapters.py  test_alembic.py  test_db_queue.py  test_engine.py  test_ocr_generic_api.py  test_ocr_ocrmypdf.py  test_repositories.py
backend/tests/api/: test_config.py  test_frontend.py  test_health.py  test_history.py  test_jobs.py  test_keywords.py  test_review.py
backend/tests/regression/: test_migration_bootstrap.py  test_no_partial_output.py  test_run_key_stability.py  test_settings_env_override.py  test_split_edges.py
backend/tests/runtime/: test_logging.py  test_preflight.py
backend/tests/unit/: test_ai_apply_usecase.py  test_atomic_exporter.py  test_confidence.py  test_evidence_validator.py  test_features.py  test_keyword_splitter.py  test_ocr_artifacts.py  test_pdf_extract.py  test_review_usecase.py  test_run_key.py  test_safe_path.py  test_settings.py  test_smoke.py  test_state_machine.py
backend/tests/worker/: test_ai_factory.py  test_loop.py  test_main_wiring.py  test_ocr_factory.py  test_processor.py  test_processor_ai.py  test_watcher.py
deploy/docker/: .dockerignore  Dockerfile  compose.truenas.yaml  compose.yaml
deploy/scripts/: entrypoint.sh
docs/: api.md  architecture.md  backups.md  configuration.md  limitations.md  operations.md  truenas.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.tsx  styles.css
frontend/src/api/: client.ts  hooks.ts  types.ts
frontend/src/app/: App.tsx  AppLayout.tsx  LanguageSwitcher.tsx
frontend/src/components/ui/: Empty.tsx  ErrorBanner.tsx  Loading.tsx
frontend/src/features/config/: ConfigPage.tsx
frontend/src/features/history/: HistoryPage.tsx
frontend/src/features/jobs/: JobDetailPage.tsx  JobsPage.tsx
frontend/src/features/keywords/: KeywordsPage.tsx
frontend/src/features/review/: ReviewDetailPage.tsx  ReviewPage.tsx
frontend/src/i18n/: index.ts
frontend/src/i18n/locales/: de.json  en.json
frontend/tests/unit/: AppLayout.test.tsx  JobsPage.test.tsx  KeywordsPage.test.tsx  ReviewDetailPage.test.tsx  ReviewPage.test.tsx  api-client.test.ts  utils.tsx
