[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docunomnom"
version = "1.0.0"
description = "PDF auto-splitting service for paperless-ngx (v1)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "DocuNomNom" }]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "httpx>=0.27",
  "structlog>=24.1",
  "pyyaml>=6.0",
  "pypdf>=4.2",
]

# Optional runtime extras. ``ocr`` pulls in the OCRmyPDF Python
# distribution; it MUST be installed into the same interpreter that
# runs the worker, because the Debian ``ocrmypdf`` apt package ships
# its Python module for the system Python (3.11 on bookworm) and
# therefore is NOT importable from the Python 3.12 interpreter used by
# the ``python:3.12-slim-bookworm`` image. Keep system-level binaries
# (tesseract, ghostscript, unpaper, qpdf, pngquant) installed via apt.
[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.11",
  "import-linter>=2.0",
]
ocr = [
  "ocrmypdf>=16,<17",
]

[project.scripts]
docunomnom-worker = "docunomnom.worker.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/docunomnom"]

[tool.hatch.build.targets.wheel.force-include]
"src/docunomnom/config/defaults.yaml" = "docunomnom/config/defaults.yaml"
"src/docunomnom/storage/migrations" = "docunomnom/storage/migrations"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
extend-exclude = ["src/docunomnom/storage/migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
# B008: FastAPI's idiomatic ``param: T = Depends(...)`` / ``Query(...)``
# pattern intentionally evaluates the marker at definition time. Disable
# the check across the API surface only.
[tool.ruff.lint.per-file-ignores]
"src/docunomnom/api/**/*.py" = ["B008"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["docunomnom"]
exclude = ["src/docunomnom/storage/migrations/versions"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["yaml", "pypdf", "ocrmypdf"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
